--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "react-scripts": "3.4.1",
     "react-slick": "^0.25.2",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.1.0"
+    "cross-env": "^7.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "cross-env NODE_PATH=src react-scripts start",
+    "build": "cross-env NODE_PATH=src react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
